<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="#90D3CFCF"
            android:text="Please Select Your Journey Preferences"
            android:textColor="#000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99D3CFCF"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <CheckBox
                android:id="@+id/checkbox_pollution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Pollution Avoidance"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="Weather"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_reliability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="Reliability"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_comfort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="Comfort"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_traffic_congestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Avoid Traffic"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/save_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Save Preferences"
            android:textColor="#4E8A3D" />

        <TextView
            android:id="@+id/json_from_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>